PROJECT(kernel)

INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/libc/include)





#set(CMAKE_C_COMPILER "${CMAKE_C_COMPILER} --sysroot=${SYSROOT}")
#set(CMAKE_C_COMPILER "${CMAKE_C_COMPILER} -isystem=${INCLUDEDIR}")


ENABLE_LANGUAGE(ASM-ATT)
set(CMAKE_ASM_COMPILER ${CMAKE_C_COMPILER})

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -g -ffreestanding -Wall -Wextra")
SET(CMAKE_CXX_FLAGS "{CMAKE_CXX_FLAGS} -D__is_kernel -Iinclude")
link_libraries( "-nostdlib -lgcc")

SET(KERNEL_BIN "kernel")

FILE(GLOB KERNEL_C_ARCH_MODULES "arch/${ARCH}/*.c")
FILE(GLOB KERNEL_ASM_ARCH_MODULES "arch/${ARCH}/*.S")
list(REMOVE_ITEM KERNEL_ASM_ARCH_MODULES "arch/${ARCH}/boot.S")
FILE(GLOB KERNEL_C_MODULES "kernel/*.c")

ADD_LIBRARY(${KERNEL_BIN} STATIC
    ${KERNEL_C_ARCH_MODULES}
    ${KERNEL_C_MODULES}
    ${KERNEL_ASM_ARCH_MODULES}
)

#set_target_properties(${KERNEL_BIN} PROPERTIES LINK_FLAGS "-n -T${CMAKE_SOURCE_DIR}/arch/${ARCH}/linker.ld")

#ADD_CUSTOM_COMMAND (TARGET ${KERNEL_BIN}
#	POST_BUILD
#	COMMAND "${CMAKE_C_COMPILER} -T${CMAKE_SOURCE_DIR}/arch/${ARCH}/linker.ld -o ${KERNEL_BIN} ${CMAKE_BINARY_DIR}/libkernel.img.a")