project(libc)

INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES("/usr/include")
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/kernel/include)

SET(FIRST_PART_HOST "i686")

if(ARCH STREQUAL "i386")
SET(FIRST_PART_HOST "i686")
endif()

SET(HOST "${FIRST_PART_HOST}-elf")

set(CMAKE_C_COMPILER "${HOST}-gcc")
message("${CMAKE_C_COMPILER}")

set(CMAKE_SYSROOT "${CMAKE_SOURCE_DIR}/sysroot")


#set(CMAKE_C_COMPILER "${CMAKE_C_COMPILER} --sysroot=${SYSROOT}")
#set(CMAKE_C_COMPILER "${CMAKE_C_COMPILER} -isystem=${INCLUDEDIR}")


SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -g -ffreestanding -Wall -Wextra")
SET(CMAKE_CXX_FLAGS "{CMAKE_CXX_FLAGS} -D__is_kernel -Iinclude")

SET(LIBK_BIN "libk.a")
FILE(GLOB_RECURSE LIBC_C_MODULES "${CMAKE_CURRENT_SOURCE_DIR}/*.c")

ADD_LIBRARY(${LIBK_BIN} STATIC
    ${LIBC_C_MODULES}
)