project(libc)

INCLUDE_DIRECTORIES("include")
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/kernel/include)



#set(CMAKE_C_COMPILER "${CMAKE_C_COMPILER} --sysroot=${SYSROOT}")
#set(CMAKE_C_COMPILER "${CMAKE_C_COMPILER} -isystem=${INCLUDEDIR}")


SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -g -ffreestanding -Wall -Wextra")
SET(CMAKE_CXX_FLAGS "{CMAKE_CXX_FLAGS} -D__is_kernel -Iinclude")

SET(LIBK_BIN "libk.a")
FILE(GLOB LIBC_CTYPE_MODULES "ctype/*.c")
FILE(GLOB LIBC_ERRNO_MODULES "errno/*.c")
FILE(GLOB LIBC_STDIO_MODULES "stdio/*.c")
FILE(GLOB LIBC_STDLIB_MODULES "stdlib/*.c")
FILE(GLOB LIBC_STRING_MODULES "string/*.c")
FILE(GLOB LIBC_SYSCALLS_MODULES "syscalls/*.c")
FILE(GLOB LIBC_TIME_MODULES "time/*.c")

message(${CMAKE_C_COMPILER})

ADD_LIBRARY(libc STATIC
    ${LIBC_CTYPE_MODULES}
    ${LIBC_ERRNO_MODULES}
    ${LIBC_STDIO_MODULES}
    ${LIBC_STDLIB_MODULES}
    ${LIBC_STRING_MODULES}
    ${LIBC_SYSCALLS_MODULES}
    ${LIBC_TIME_MODULES}
)